-
Bug
-
Resolution: Done
-
P2: Important
-
5.13.1
-
-
090f404cf80da35734f712b02cc1543acecd5b62
With the attached example the DragHandler steals the event from the MouseArea
even if preventStealing is true.
In particular we noticed that this behaviour is broken with touch screen and
touch events. Conversaly interacting ONLY with mouse doesn't reproduce the
problem, however the bug happens also with mouse too after touch interaction.
To recap:
- touch only: bug
- mouse only: no bug
- with mouse after some touch input: bug
In particular the QtQuickControls 2 Popup seems to have a big role in this bug
Steps for reproducing
- BUG WITH TOUCH
Try to drag the blue rectangle with a touch device.
Nothing should happen since the mouse area has preventStealing (true) and thus should swallow the mouse events.
What happen is that the orange rectagle is dragged effectively stealing the grab wrong - NO BUG WITH MOUSE
Try to drag the blue rectangle with a mouse device. Nothing should happen
since the mouse area should swallow the mouse events. ok - BUG WITH MOUSE AFTER USING TOUCH
Try to drag the blue rectangle with a mouse device. Nothing should happen
since the mouse area should swallow the mouse events. ok. Without closing
the application do the same thing with touch events. You will trigger the bug
as describe in the first example. Try to the same again with mouse. You will
trigger the bug. wrong
- relates to
-
QTBUG-78258 DragHandler's grab permission CanTakeOverFromAnything does not respect keep grab
-
- Closed
-
| For Gerrit Dashboard: QTBUG-79163 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 283738,5 | Don't let PointerHandler steal touch grab from preventStealing MouseArea | 5.14 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 349213,6 | Don't let PointerHandler steal mouse grab from keepMouseGrab layer | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 350350,3 | Don't let PointerHandler steal mouse grab from keepMouseGrab layer | 6.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 350351,3 | Don't let PointerHandler steal mouse grab from keepMouseGrab layer | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |